test/fail/use-before-define.mo
//MOC-FLAG -A=M0194
import Prim "mo:⛔";

func f():Int = x;
let y = f();
let x = 1;
Prim.debugPrintInt(x);
